--- a/data/ssbrc/trim_pattern/alteredbeast_default_waredragon.json
+++ b/data/ssbrc/trim_pattern/alteredbeast_default_waredragon.json
@@ -1,5 +1,5 @@
 {
-	"asset_id": "ssbrc:link",
+	"asset_id": "ssbrc:alteredbeast_default_waredragon",
 	"description": {
 	"translate": "trim_pattern.example.stripes"
 	},
