--- a/data/ssbrc/trim_pattern/alteredbeast_gold_human.json
+++ b/data/ssbrc/trim_pattern/alteredbeast_gold_human.json
@@ -1,5 +1,5 @@
 {
-	"asset_id": "ssbrc:giegue",
+	"asset_id": "ssbrc:alteredbeast_gold_human",
 	"description": {
 	"translate": "trim_pattern.example.stripes"
 	},
