--- a/data/ssbrc/loot_tables/fishing/fish/treasurefish.json
+++ b/data/ssbrc/loot_tables/fishing/fish/treasurefish.json
@@ -6,14 +6,14 @@
 			"entries": [
 				{
 					"type": "minecraft:item",
-					"weight": 2,
-					"name": "minecraft:tropical_fish",
+					"weight": 9,
+					"name": "minecraft:cod",
 					"functions": [
 						{
 							"function": "minecraft:set_name",
 							"entity": "this",
 							"name": {
-								"text": "Tropical Fish",
+								"text": "Treasurefish",
 								"color": "blue",
 								"bold": true,
 								"italic": false
@@ -24,7 +24,7 @@
 							"entity": "this",
 							"lore": [
 								{
-									"text": "Minecraft",
+									"text": "Kid Icarus",
 									"color": "gray",
 									"bold": false,
 									"italic": false
@@ -37,14 +37,14 @@
 				{
 					"type": "minecraft:item",
 					"weight": 1,
-					"name": "minecraft:tropical_fish",
+					"name": "minecraft:cod",
 					"functions": [
 						{
 							"function": "minecraft:set_name",
 							"entity": "this",
 							"name": {
-								"text": "Tropical Fish",
-								"color": "blue",
+								"text": "Treasurefish",
+								"color": "gold",
 								"bold": true,
 								"italic": false
 							}
@@ -54,7 +54,7 @@
 							"entity": "this",
 							"lore": [
 								{
-									"text": "Game & Watch",
+									"text": "Kid Icarus",
 									"color": "gray",
 									"bold": false,
 									"italic": false
