beast improvements/fixes

--- a/data/ssbrc/loot_tables/fighters/alteredbeast/mark_of_the_beast.json
+++ b/data/ssbrc/loot_tables/fighters/alteredbeast/mark_of_the_beast.json
@@ -39,7 +39,7 @@
 						},
 						{
 							"function": "minecraft:set_nbt",
-							"tag": "{markOfTheBeast:1,Unbreakable:1b,HideFlags:255}"
+							"tag": "{markOfTheBeast:1,HideFlags:255}"
 						}
 					]
 				}
