--- a/data/ssbrc/loot_tables/fighters/alteredbeast/mark_of_the_beast.json
+++ b/data/ssbrc/loot_tables/fighters/alteredbeast/mark_of_the_beast.json
@@ -38,6 +38,25 @@
 							"replace": true
 						},
 						{
+							"function": "minecraft:set_attributes",
+							"modifiers": [
+								{
+									"attribute": "minecraft:generic.attack_damage",
+									"name": "Attack Damage",
+									"amount": 0,
+									"operation": "multiply_base",
+									"slot": "mainhand"
+								},
+								{
+									"attribute": "minecraft:generic.attack_speed",
+									"name": "Attack Speed",
+									"amount": -1024,
+									"operation": "multiply_base",
+									"slot": "mainhand"
+								}
+							]
+						},
+						{
 							"function": "minecraft:set_nbt",
 							"tag": "{markOfTheBeast:1,HideFlags:255}"
 						}
