--- a/data/ssbrc/item_modifiers/items/cracker_launcher.json
+++ b/data/ssbrc/item_modifiers/items/cracker_launcher.json
@@ -3,7 +3,7 @@
 		"function": "minecraft:set_name",
 		"entity": "this",
 		"name": {
-			"translate": "ssbrc.tooltips.item.maximTomato",
+			"translate": "ssbrc.tooltips.item.crackerLauncher",
 			"color": "red",
 			"bold": true,
 			"italic": false
@@ -20,14 +20,34 @@
 				"italic": false
 			},
 			{
-				"translate": "ssbrc.tooltips.item.recovery",
+				"translate": "ssbrc.tooltips.item.shooting",
 				"color": "white",
 				"bold": false,
 				"italic": false,
 				"underlined": true
 			},
 			{
-				"translate": "ssbrc.tooltips.item.maximTomato.description.1",
+				"translate": "- [",
+				"color": "gray",
+				"bold": false,
+				"italic": false,
+				"extra": [
+					{
+						"keybind": "key.use",
+						"color": "gray",
+						"bold": false,
+						"italic": false
+					},
+					{
+						"translate": "ssbrc.tooltips.item.activation.activate",
+						"color": "gray",
+						"bold": false,
+						"italic": false
+					}
+				]
+			},
+			{
+				"translate": "ssbrc.tooltips.item.crackerLauncher.description.1",
 				"color": "gray",
 				"bold": false,
 				"italic": false
@@ -56,6 +76,6 @@
 	},
 	{
 		"function": "minecraft:set_nbt",
-		"tag": "{maximTomato:1,CustomModelData:5,HideFlags:255}"
+		"tag": "{crackerLauncher:1,HideFlags:255}"
 	}
 ]
