--- a/data/ssbrc/loot_tables/ui/shop/skins/princess_peach/flower_power/unowned.json
+++ b/data/ssbrc/loot_tables/ui/shop/skins/princess_peach/flower_power/unowned.json
@@ -59,7 +59,7 @@
 						},
 						{
 							"function": "minecraft:set_nbt",
-							"tag": "{ui:{id:\"skins.princessPeach.flowerPower\",sound:\"click\"},CustomModelData:1162}"
+							"tag": "{ui:{id:\"skins.princess_peach.flowerPower\",sound:\"click\"},CustomModelData:1162}"
 						}
 					]
 				}
