--- a/data/ssbrc/tags/entity_types/projectiles.json
+++ b/data/ssbrc/tags/entity_types/projectiles.json
@@ -5,6 +5,7 @@
 		"minecraft:armor_stand",
 		"minecraft:fireball",
 		"minecraft:firework_rocket",
+		"minecraft:item_display",
 		"minecraft:marker",
 		"minecraft:trident"
 	]
