--- a/data/ssbrc/loot_tables/ui/shop/skins/link/dark_tunic/unowned.json
+++ b/data/ssbrc/loot_tables/ui/shop/skins/link/dark_tunic/unowned.json
@@ -12,19 +12,23 @@
 							"function": "minecraft:set_name",
 							"entity": "this",
 							"name": {
-								"translate": "ssbrc.fighters.link.skin.goronTunic",
-								"color": "red",
+								"translate": "ssbrc.fighters.link.skin.dark_tunic",
+								"color": "dark_gray",
 								"bold": true,
 								"italic": false
 							}
 						},
 						{
 							"function": "minecraft:reference",
-							"name": "ssbrc:ui/shop/owned"
+							"name": "ssbrc:ui/shop/price/skin"
+						},
+						{
+							"function": "minecraft:reference",
+							"name": "ssbrc:ui/shop/unowned"
 						},
 						{
 							"function": "minecraft:set_nbt",
-							"tag": "{CustomModelData:723}"
+							"tag": "{ui:{id:\"skins.link.dark_tunic\",sound:\"click\"},CustomModelData:723}"
 						}
 					]
 				}
