--- a/data/ssbrc/loot_tables/items/cracker_launcher.json
+++ b/data/ssbrc/loot_tables/items/cracker_launcher.json
@@ -37,7 +37,7 @@
 						},
 						{
 							"function": "minecraft:set_nbt",
-							"tag": "{cracker_launcher:1}"
+							"tag": "{cracker_launcher:1,CustomModelData:11}"
 						}
 					]
 				}
