--- a/data/ssbrc/loot_tables/ui/shop/skins/shadow/yellow_android/unowned.json
+++ b/data/ssbrc/loot_tables/ui/shop/skins/shadow/yellow_android/unowned.json
@@ -9,14 +9,8 @@
 					"name": "minecraft:barrier",
 					"functions": [
 						{
-							"function": "minecraft:set_name",
-							"entity": "this",
-							"name": {
-								"translate": "ssbrc.fighters.shadow.skin.yellow_android",
-								"color": "yellow",
-								"bold": true,
-								"italic": false
-							}
+							"function": "minecraft:reference",
+							"name": "ssbrc:fighters/shadow/skins/yellow_android"
 						},
 						{
 							"function": "minecraft:reference",
@@ -28,7 +22,7 @@
 						},
 						{
 							"function": "minecraft:set_nbt",
-							"tag": "{ui:{id:\"skins.shadow.yellow_android\",sound:\"click\"},CustomModelData:1902}"
+							"tag": "{ui:{id:\"skins.shadow.yellow_android\",sound:\"click\"}}"
 						}
 					]
 				}
