--- a/data/ssbrc/loot_tables/fighters/yar/ray_blaster/missile_launcher.json
+++ b/data/ssbrc/loot_tables/fighters/yar/ray_blaster/missile_launcher.json
@@ -81,8 +81,11 @@
 							]
 						},
 						{
-							"function": "minecraft:set_custom_data",
-							"tag": "{item:\"missile_launcher\"}"
+							"function": "minecraft:set_components",
+							"components": {
+								"minecraft:max_damage": 100,
+								"minecraft:custom_data": {"item":"missile_launcher"}
+							}
 						}
 					]
 				}
