--- a/data/ssbrc/advancement/utility/use_item/fighter/yar/missile_launcher.json
+++ b/data/ssbrc/advancement/utility/use_item/fighter/yar/missile_launcher.json
@@ -8,21 +8,15 @@
 					{
 						"condition": "minecraft:reference",
 						"name": "ssbrc:universal_cooldown"
-					},
-					{
-						"condition": "minecraft:entity_scores",
-						"entity": "this",
-						"scores": {
-							"cooldown.1": {
-								"max": 0
-							}
-						}
 					}
 				],
 				"item": {
 					"items": "#ssbrc:equipment",
 					"predicates": {
-						"minecraft:custom_data": "{item:\"missile_launcher\"}"
+						"minecraft:custom_data": "{item:\"missile_launcher\"}",
+						"minecraft:damage": {
+							"damage": 0
+						}
 					}
 				}
 			}
