--- a/.github/workflows/ftp.yml
+++ b/.github/workflows/ftp.yml
@@ -1,19 +1,43 @@
-on: push
-name: FTP File Sync
+name: Build and Deploy
+
+on:
+  push:
+    branches:
+      - main
+
+env:
+  PYTHON_VERSION: 3.11
+
 jobs:
-  web-deploy:
-    name: Deploy
+  build:
     runs-on: ubuntu-latest
+
     steps:
-    - name: Get latest code
-      uses: actions/checkout@v4
+      - name: Build Start Notif
+        run: |
+          curl "https://mc.bloom.host/api/client/servers/e2d8cd97/command" \
+            -H 'Accept: application/json' \
+            -H 'Content-Type: application/json' \
+            -H 'Authorization: Bearer ${{ secrets.BLOOM_API_KEY }}' \
+            -X POST \
+            -d '{
+              "command": "say pushing latest code to server..."
+            }'
 
-    - name: FTP Deploy
-      uses: SamKirkland/FTP-Deploy-Action@v4.3.5
-      with:
-        server: ${{ secrets.FTP_HOSTNAME }}
-        username: ${{ secrets.FTP_USERNAME }}
-        password: ${{ secrets.FTP_PASSWORD }}
-        port: 21
+      - name: Checkout repository
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
-        server-dir: world/datapacks/super_smash_bros_recrafted/
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: ${{ env.PYTHON_VERSION }}
+
+      - name: Install dependencies
+        run: pip install requests
+
+      - name: Send message to server
+        env:
+          BLOOM_API_KEY: "${{ secrets.BLOOM_API_KEY }}"
+        run: poetry run python .github/workflows/send_bloom.py
