--- a/.github/workflows/ftp.yml
+++ b/.github/workflows/ftp.yml
@@ -40,6 +40,9 @@ jobs:
       - name: Install dependencies
         run: pip install beet
 
+      - name: Install dependencies
+        run: pip install bolt
+
       - name: Build Beet
         run: beet build
 
