--- a/.github/workflows/ftp.yml
+++ b/.github/workflows/ftp.yml
@@ -21,7 +21,7 @@ jobs:
             -H 'Authorization: Bearer ${{ secrets.BLOOM_API_KEY }}' \
             -X POST \
             -d '{
-              "command": "function ssbrc:server/start"
+              "command": "function ssbrc_server:start"
             }'
 
       - name: Checkout repository
