--- a/src/data/ssbrc/advancement/utility/use_item/fighter/ice_climbers/snowstorm.json
+++ b/src/data/ssbrc/advancement/utility/use_item/fighter/ice_climbers/snowstorm.json
@@ -8,6 +8,15 @@
 					{
 						"condition": "minecraft:reference",
 						"name": "ssbrc:cooldown/universal"
+					},
+					{
+						"condition": "minecraft:entity_scores",
+						"entity": "this",
+						"scores": {
+							"resource": {
+								"min": 10
+							}
+						}
 					}
 				],
 				"item": {
