--- a/src/assets/ssbrc/models/fighter/ice_climbers/item/snowstorm.json
+++ b/src/assets/ssbrc/models/fighter/ice_climbers/item/snowstorm.json
@@ -1,5 +1,5 @@
 {
-	"parent": "minecraft:item/handheld",
+	"parent": "ssbrc:template/item/hud",
 	"textures": {
 		"layer0": "ssbrc:fighter/ice_climbers/item/snowstorm"
 	}
